# FABouanes

./: .dockerignore  .env.example  .gitignore  ACCES_APPLICATION.md  ARCHITECTURE.md  AUTHENTIFICATION_GITHUB.md  CHANGELOG.md  CODE_INSPECTION_REPORT.md  COMPILER_EXE_AVEC_TESTS.bat  COVERAGE_TESTS.bat  CREER_INSTALLATEUR_WINDOWS.bat  DOUBLE_CLIC_LANCER_TOUT.bat  Dockerfile  GENERER_ZIP_LIVRABLE.bat  GITHUB_SETUP_GUIDE.md  LANCER.bat  LANCER_ANDROID_RESEAU.bat  LANCER_TESTS.bat  NETTOYAGE_GENERAL.bat  PUSH_GITHUB.bat  QUALITE_CODE.bat  README.md  RESET_ADMIN_SECOURS.bat  SEED_DEMO.bat  START_POSTGRES.bat  STOP_POSTGRES.bat  alembic.ini  app.py  audit_code.py  coverage.txt  coverage_report.txt  coverage_report2.txt  docker-compose.yml  fabouanes_pre_tests.backup  http_stress_report.txt  launcher.py  pyproject.toml  pytest.ini  requirements-frozen.txt  requirements.txt  (+7 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_perf_indexes.py  0002b_add_performance_indexes.py  0003_consolidate_compat_columns.py  0004_critical_indexes.py  0005_fix_financial_types.py  0006_add_document_fk.py  0007_fix_timestamp_types.py  0008_add_updated_at.py  0009_add_document_numbers.py  0010_add_fts_postgresql.py  0011_add_bi_reporting_indexes.py  0012_add_fts_postgresql.py  0012_operations_perf.py  0013_add_bi_reporting_indexes.py  0013_migrate_expenses_types.py  0014_migrate_operations_dates.py  0014_operations_perf.py  0015_client_stats_view.py  0016_missing_indexes.py  0016_offline_receipts_perf_indexes.py  0017_fix_column_types.py  0018_client_balance_view.py  0019_add_client_history.py  0020_fix_client_history_triggers.py  0021_fix_comptoir_triggers.py  0022_perf_idx.py  0023_client_timeline_idx.py  0024_catalog_alert_idx.py  0025_transaction_performance_idx.py  0026_fix_financial_decimal_types.py  0027_add_stock_alerts.py  0028_add_manager_role.py  0029_db_opt_idx_views.py  0030_type_conversions.py  0031_updated_at_triggers.py  0032_client_history.py  0033_views_and_alerts.py  0034_gamification.py  0035_data_types_fix.py  (+4 more)
android_wrapper/: README_ANDROID.md  capacitor.config.json  local.properties  package-lock.json  package.json  settings.gradle
android_wrapper/app/: build.gradle
android_wrapper/web/: index.html  main.js  styles.css
app/: __init__.py  main.py  version.py
app/api/: compat_routes.py  deps.py  router.py  ws.py
app/core/: activity.py  async_db.py  audit.py  auth_cookie.py  base_repository.py  config.py  connection.py  database.py  db.py  db_access.py  db_compat.py  db_helpers.py  db_pool.py  db_sqlite.py  document_numbering.py  event_bus.py  events.py  exception_handlers.py  exceptions.py  helpers.py  idempotency.py  jwt_auth.py  lifespan.py  logging.py  middleware.py  model_utils.py  models.py  observability.py  perf_cache.py  permissions.py  plugin_registry.py  rate_limit.py  rate_limit_store.py  registry.py  request_state.py  runtime_paths.py  sanitizer.py  schema.py  schema_bootstrap.py  search.py  (+6 more)
app/modules/: __init__.py  base.py
app/repositories/: base_repository.py  client_repository.py  dashboard_repository.py  (+10 more)
dev-tools/: LANCER_TESTS.bat
docs/: GOOGLE_DRIVE_SETUP.md  INSTRUCTIONS_COMPLETES.md  offline_sync.md  termux_setup.md
fabouanes/: .env  __init__.py  app_factory.py  config.py  db.py  fastapi_compat.py  logging_setup.py  postgres_support.py  runtime_app.py  security.py  validation.py
launcher/: __init__.py  desktop_launcher.py  run_server.py
migrations/: 001_initial_schema.sql  002_add_activity_logs.sql  003_add_invoice_tables.sql  004_add_indexes.sql  005_database_performance_indexes.sql
scratch/: audit_report_complete.txt  benchmark_perf.py  dump_schema.py  parse_failures.py  read_audit_full.py  read_failures.py  schema_dump.sql  search_all_transcripts.py  test_db_mock.py  test_payments.py
scripts/: bundle_js.py  check_offline.py  clear_rate_limit.py  http_stress_test.py  import_all_history.py  inject_offline.py  purge_test_data.py  run_chaos_mixing_test.py  run_crud_simulation_test.py  run_extreme_chaos_test.py  run_production_simulation.py  sabrina_stress_test.py  simulate_app_usage.py  stress_test_app.py  test_catalog.py  test_error_handling.py  test_purchases_hybrid.py  test_sabrina_agent.py
static/: app.css  app.js  manifest.json  offline.html  sw.js
templates/: _pagination.html  admin.html  ai_chat.html  assistant.html  base.html  catalog.html  catalog_new.html  change_password.html  client_detail.html  client_edit.html  client_history_print.html  client_import.html  client_import_preview_single.html  client_new.html  clients.html  contact_new.html  contacts.html  dashboard.html  debts.html  error.html  expense_form.html  expenses.html  login.html  mobile_connect.html  notes.html  operation_new.html  payment_edit.html  payment_new.html  payments.html  pdf_reader.html  print_document.html  product_edit.html  production.html  production_new.html  products.html  purchase_edit.html  purchase_new.html  purchases.html  quick_add.html  raw_material_edit.html  (+13 more)
tests/: business_flow_case.py  conftest.py  pyproject_services.toml  run_db_tests.py  test_admin_api.py  test_api_security.py  test_api_validation.py  test_assistant.py  test_assistant_memory_confirmations.py  test_assistant_tool_actions_split.py  test_auth.py  test_briefing.py  test_business_flows.py  test_business_flows_dashboard.py  test_business_flows_mobile.py  test_business_flows_payments.py  test_business_flows_print.py  test_business_flows_production.py  test_business_flows_purchases.py  test_business_flows_sales.py  test_business_flows_system.py  test_business_flows_ui.py  test_cleanup_contract.py  test_client_account_integration.py  test_coverage.py  test_coverage_final_push.py  test_db_helpers.py  test_exception_handlers.py  test_expenses.py  test_fastapi_compat.py  test_financial_core.py  test_financial_reconciliation.py  test_low_coverage_boost.py  test_migrations.py  test_payment_architecture.py  test_rate_limit_store.py  test_robustness.py  test_security_rtr_rate_limit.py  test_services_coverage.py  test_simulation.py  (+1 more)
(+392 files in other folders)
