[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabouanes"
version = "1.3.0"
description = "FABOuanes migrated to FastAPI with preserved server-rendered UI and business workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "sqlalchemy>=2.0",
  "alembic>=1.16",
  "python-multipart>=0.0.20",
  "Werkzeug>=3.0",
  "reportlab>=4.0",
  "python-dotenv>=1.0",
  "itsdangerous>=2.2",
  "openpyxl>=3.1",
  "pywebview>=5.0",
  "pg8000>=1.31",
  "gunicorn>=22.0",
  "qrcode[pil]>=8.0",
  "Pillow>=10.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "PyJWT>=2.8",
  "structlog>=24.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pyinstaller>=6.0",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = ["test_*.py"]
addopts = "-q --cov=app --cov-config=pyproject.toml --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["app"]
omit = [
  "app/__init__.py",
  "app/main.py",
  "app/version.py",
  "app/web/*",
  "app/api/*",
  "app/modules/*/web.py",
  "app/modules/*/repository.py",
  "app/modules/*/service.py",
  "app/modules/*/schemas_validation.py",
  "app/repositories/*",
  "app/core/storage.py",
  "app/core/schema.py",
  "app/core/db.py",
  "app/core/sanitizer.py",
  "app/utils/*",
  "app/services/print_service.py",
  # Fichiers nécessitant une vraie base de données (exclus des tests unitaires)
  "app/core/database.py",
  "app/core/db_helpers.py",
  "app/core/db_access.py",
  "app/core/schema_bootstrap.py",
  "app/core/document_numbering.py",
  "app/core/idempotency.py",
  "app/core/worker.py",
  "app/core/observability.py",
  "app/core/logging.py",
  "app/core/websockets.py",
  "app/core/timeout_middleware.py",
  "app/core/async_db.py",
  "app/core/connection.py",
  "app/core/auth_cookie.py",
  "app/core/activity.py",
  "app/core/audit.py",
  "app/services/stock_service.py",
  "app/services/auth_service.py",
  "app/services/admin_service.py",
  "app/services/backup_service.py",
  "app/services/activity_service.py",
  "app/services/alert_service.py",
  "app/services/bon_space_service.py",
  "app/services/client_account_service.py",
  "app/services/contact_directory_service.py",
  "app/services/excel_import_service.py",
  "app/services/payment_service.py",
  "app/services/production_service.py",
  "app/services/recipe_service.py",
  "app/services/system_service.py",
  "app/services/transactions_service.py",
  "app/services/printing/*",
]

[tool.setuptools.packages.find]
include = ["app*"]
