[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabouanes"
version = "2.0.0"
description = "FABOuanes migrated to FastAPI with preserved server-rendered UI and business workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.16",
  "python-multipart>=0.0.20",
  "Werkzeug>=3.0",
  "reportlab>=4.0",
  "python-dotenv>=1.0",
  "itsdangerous>=2.2",
  "openpyxl>=3.1",
  "pywebview>=5.0",
  "pg8000>=1.31",
  "asyncpg>=0.29",
  "gunicorn>=22.0",
  "qrcode[pil]>=8.0",
  "Pillow>=10.0",
  "slowapi>=0.1.9",
  "pandas>=2.0",
  "apscheduler>=3.10.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "PyJWT>=2.8",
  "structlog>=24.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "cryptography>=46.0",
  "sqlglot>=30.0",
  "pypdf>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pyinstaller>=6.0",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = ["test_*.py"]
addopts = "-q --cov=app --cov-config=pyproject.toml --cov-report=term-missing --cov-fail-under=60"
filterwarnings = [
  # SQLite retourne des types primitifs (str, float, int) au lieu de date/Decimal/bool.
  # Ces avertissements Pydantic sont normaux en test et n'affectent pas la production (PostgreSQL).
  "ignore:Pydantic serializer warnings.*PydanticSerializationUnexpectedValue.*production_date:UserWarning",
  "ignore:Pydantic serializer warnings.*PydanticSerializationUnexpectedValue.*opening_credit:UserWarning",
  "ignore:Pydantic serializer warnings.*PydanticSerializationUnexpectedValue.*amount:UserWarning",
  "ignore:Pydantic serializer warnings.*PydanticSerializationUnexpectedValue.*must_change_password:UserWarning",
  "ignore:Pydantic serializer warnings.*PydanticSerializationUnexpectedValue.*is_active:UserWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
  "app/__init__.py",
  "app/main.py",
  "app/version.py",
  "app/web/*",
  "app/api/*",
  "app/modules/*/web.py",
  "app/modules/*/schemas_validation.py",
  "app/modules/*/repository.py",
  "app/modules/*/service.py",
  "app/core/storage.py",
  "app/core/sanitizer.py",
  "app/utils/*",
  "app/services/*",
  "app/services/print_service.py",
  # Fichiers requérant une vraie base de données (exclus des tests unitaires)
  "app/core/database.py",
  "app/core/db.py",
  "app/core/db_helpers.py",
  "app/core/db_access.py",
  "app/core/schema.py",
  "app/core/schema_bootstrap.py",
  "app/core/document_numbering.py",
  "app/core/idempotency.py",
  "app/core/worker.py",
  "app/core/observability.py",
  "app/core/logging.py",
  "app/core/websockets.py",
  "app/core/timeout_middleware.py",
  "app/core/async_db.py",
  "app/core/connection.py",
  "app/core/auth_cookie.py",
  "app/core/activity.py",
  "app/core/audit.py",
  # Fichiers trop liés à l'infrastructure pour être testés unitairement
  "app/core/model_utils.py",
  "app/core/request_state.py",
  "app/core/perf_cache.py",
  "app/core/events.py",
]

[tool.setuptools.packages.find]
include = ["app*"]
